Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25539

Pasting documentation comments breaks the indentation

    XMLWordPrintable

Details

    • afed126ba1 (qt-creator/qt-creator/9.0) afed126ba1 (qt-creator/qt-creator/master) afed126ba1 (qt-creator/qt-creator/qds/dev)

    Description

      Starting with 4.14.x if I'm copying

      /*!
          \qmlproperty double Type::property
      
          \brief The property of Type.
      */
      

      and then pasting it in another place, ends up like this:

      /*!
          \qmlproperty double Type::property
      
      \brief The property of Type.
              */
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            artem.sokolovskii Artem Sokolovskii
            taipan BogDan Vatra
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes